--- a/CSA/PROFTAAK SERVER/Service/App.config
+++ b/CSA/PROFTAAK SERVER/Service/App.config
@@ -3,11 +3,11 @@
   <system.serviceModel>
     <services>
       <service behaviorConfiguration="MEXGET" name="Service.CService">
-        <endpoint address="" binding="wsHttpBinding" contract="MyCalculatorContract.ICalculator" />
+        <endpoint address="" binding="wsHttpBinding" contract="MyServiceContract.IDashboard" />
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8000/calculatorservice" />
+            <add baseAddress="http://localhost:8000/trainservice" />
           </baseAddresses>
         </host>
       </service>
