--- a/CSA/PROFTAAK SERVER/Service/Service.csproj
+++ b/CSA/PROFTAAK SERVER/Service/Service.csproj
@@ -47,6 +47,7 @@
     <Compile Include="CService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Train.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
