--- a/CSA/PROFTAAK SERVER/Service/App.config
+++ b/CSA/PROFTAAK SERVER/Service/App.config
@@ -3,7 +3,12 @@
   <system.serviceModel>
     <services>
       <service behaviorConfiguration="MEXGET" name="Service.CService">
-        <endpoint address="" binding="wsHttpBinding" contract="MyServiceContract.IDashboard" />
+        <endpoint address="http://localhost:8080/trainservice/" binding="wsDualHttpBinding" contract="MyServiceContract.IDashboard">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
