--- a/CSA/TrainClient/TrainClient/App.config
+++ b/CSA/TrainClient/TrainClient/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_ITrainService" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:8733/TrainService/" binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_ITrainService" contract="TrainService.ITrainService"
+                name="BasicHttpBinding_ITrainService" />
+        </client>
+    </system.serviceModel>
 </configuration>
