--- a/CSA/TrainService/TrainService/TrainService.csproj
+++ b/CSA/TrainService/TrainService/TrainService.csproj
@@ -13,9 +13,10 @@
     <AssemblyName>TrainService</AssemblyName>
     <ProjectTypeGuids>{3D9AD99F-2412-4246-B90B-4EAA41C64699};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <StartArguments>/client:"WcfTestClient.exe"</StartArguments>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <WcfConfigValidationEnabled>True</WcfConfigValidationEnabled>
     <XsdCodeGenEnabled>True</XsdCodeGenEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -47,6 +48,7 @@
   <ItemGroup>
     <Compile Include="ITrainService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SerialClass.cs" />
     <Compile Include="TrainService.cs" />
   </ItemGroup>
   <ItemGroup>
