--- a/CSA/TrainClient/TrainClient/TrainClient.csproj
+++ b/CSA/TrainClient/TrainClient/TrainClient.csproj
@@ -62,6 +62,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Client Form.resx">
+      <DependentUpon>Client Form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
