Last InTouch edits

--- a/PRS/SCADA InTouch/INTOUCH.INI
+++ b/PRS/SCADA InTouch/INTOUCH.INI
@@ -16,10 +16,12 @@ RepositoryName=F146713add3e478c87868fa427f94264
 IdeManagedApp=3
 CloseOnTransfer=0
 SAOConverted=1
-ApplicationVersionNo=12
+ApplicationVersionNo=25
 WinFullScreen=1
 WinLeft=-8
 WinTop=-8
 WinWidth=1552
 WinHeight=840
 SelectedLangID=1033
+SnapOn=1
+CurCountryCode=31
