--- a/PRS/SCADA InTouch/dde.cfg
+++ b/PRS/SCADA InTouch/dde.cfg
@@ -1,15 +1,14 @@
 Begin DDE Information.
     Last DDE Source:	3
 Begin DDE Source Definition.
-    Source Name:		PLC
-    Application Name:		server_runtime
-    Topic Name:			PLC1
-    DDE Source ID:		3
+    Source Name:		Galaxy
+    Application Name:		\\NA\NA
+    Topic Name:			NA
+    DDE Source ID:		2
     Request Initial Data:	1
     Always Advise:		0
-    SuiteLink:			1
+    SuiteLink:			3
     Begin DDE Points
-        Motor1;0023:  Motor1
     End DDE Points
 End DDE Source Definition.
 Begin DDE Source Definition.
@@ -24,14 +23,16 @@ Begin DDE Source Definition.
     End DDE Points
 End DDE Source Definition.
 Begin DDE Source Definition.
-    Source Name:		Galaxy
-    Application Name:		\\NA\NA
-    Topic Name:			NA
-    DDE Source ID:		2
+    Source Name:		PLC11
+    Application Name:		server_runtime
+    Topic Name:			LoadingPLC
+    DDE Source ID:		3
     Request Initial Data:	1
     Always Advise:		0
-    SuiteLink:			3
+    SuiteLink:			1
     Begin DDE Points
+        mot1;0024:  Motor1
+        Motor1;0023:  Motor1
     End DDE Points
 End DDE Source Definition.
 End DDE Information.
