--- a/CSA/TrainClient/TrainClient/App.config
+++ b/CSA/TrainClient/TrainClient/App.config
@@ -6,11 +6,13 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_ITrainService"/>
+                <binding name="BasicHttpBinding_ITrainService" />
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:8733/TrainService/" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ITrainService" contract="TrainService.ITrainService" name="BasicHttpBinding_ITrainService"/>
+            <endpoint address="http://172.16.1.1:8733/TrainService/" binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_ITrainService" contract="TrainService.ITrainService"
+                name="BasicHttpBinding_ITrainService" />
         </client>
     </system.serviceModel>
 </configuration>
