--- a/CSA/TrainService/TrainService/App.config
+++ b/CSA/TrainService/TrainService/App.config
@@ -20,7 +20,7 @@
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8733/TrainService/"/>
+            <add baseAddress="http://172.16.1.1:8733/TrainService/"/>
           </baseAddresses>
         </host>
       </service>
