Latest InTouch changes

--- a/PRS/SCADA InTouch/INTOUCH.INI
+++ b/PRS/SCADA InTouch/INTOUCH.INI
@@ -16,7 +16,7 @@ RepositoryName=F146713add3e478c87868fa427f94264
 IdeManagedApp=3
 CloseOnTransfer=0
 SAOConverted=1
-ApplicationVersionNo=25
+ApplicationVersionNo=223
 WinFullScreen=1
 WinLeft=-8
 WinTop=-8
@@ -25,3 +25,4 @@ WinHeight=840
 SelectedLangID=1033
 SnapOn=1
 CurCountryCode=31
+TextBox=2
