--- a/PRS/SCADA InTouch/dde.cfg
+++ b/PRS/SCADA InTouch/dde.cfg
@@ -31,6 +31,15 @@ Begin DDE Source Definition.
     Always Advise:		0
     SuiteLink:			1
     Begin DDE Points
+        MaxContainers;0034:  MaxContainers
+        Count1;002D:  Count
+        Count;002C:  Count
+        PowerOff;002A:  PowerOff
+        ResetSystem;0029:  ResetSystem
+        Power;0028:  PowerOnOff
+        PowerOn;0027:  PowerOn
+        Motor3;0026:  Motor3
+        Motor2;0025:  Motor2
         mot1;0024:  Motor1
         Motor1;0023:  Motor1
     End DDE Points
