--- a/CSA/TrainClient/TrainClient/TrainClient.csproj
+++ b/CSA/TrainClient/TrainClient/TrainClient.csproj
@@ -85,14 +85,14 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="Service References\TrainService\service.wsdl" />
-    <None Include="Service References\TrainService\service.xsd">
+    <None Include="Service References\TrainService\item.wsdl" />
+    <None Include="Service References\TrainService\item.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\TrainService\item1.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Service References\TrainService\TrainService.wsdl" />
-    <None Include="Service References\TrainService\TrainService.xsd">
-      <SubType>Designer</SubType>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -102,6 +102,9 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadataStorage Include="Service References\TrainService\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\TrainService\item.disco" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Service References\TrainService\configuration91.svcinfo" />
