--- a/PRS/SCADA InTouch/dde.cfg
+++ b/PRS/SCADA InTouch/dde.cfg
@@ -31,6 +31,7 @@ Begin DDE Source Definition.
     Always Advise:		0
     SuiteLink:			1
     Begin DDE Points
+        PowerOnOff;0035:  PowerOnOff
         MaxContainers;0034:  MaxContainers
         Count1;002D:  Count
         Count;002C:  Count
