--- a/CSA/callbackversion/TrainClient/TrainClient/App.config
+++ b/CSA/callbackversion/TrainClient/TrainClient/App.config
@@ -5,14 +5,22 @@
     </startup>
     <system.serviceModel>
         <bindings>
-            <basicHttpBinding>
-                <binding name="BasicHttpBinding_ITrainService" />
-            </basicHttpBinding>
+            <wsDualHttpBinding>
+                <binding name="WSDualHttpBinding_ITrainService">
+                    <security mode="Message">
+                        <message clientCredentialType="Windows" />
+                    </security>
+                </binding>
+            </wsDualHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:8733/TrainService/" binding="basicHttpBinding"
-                bindingConfiguration="BasicHttpBinding_ITrainService" contract="TrainService.ITrainService"
-                name="BasicHttpBinding_ITrainService" />
+            <endpoint address="http://localhost:8733/TrainService/" binding="wsDualHttpBinding"
+                bindingConfiguration="WSDualHttpBinding_ITrainService" contract="TrainService.ITrainService"
+                name="WSDualHttpBinding_ITrainService">
+                <identity>
+                    <dns value="localhost" />
+                </identity>
+            </endpoint>
         </client>
     </system.serviceModel>
 </configuration>
