--- a/CSA/callbackversion/TrainService/TrainService/App.config
+++ b/CSA/callbackversion/TrainService/TrainService/App.config
@@ -12,7 +12,7 @@
   <system.serviceModel>
     <services>
       <service name="TrainService.TrainService">
-        <endpoint address="" binding="basicHttpBinding" contract="TrainService.ITrainService">
+        <endpoint address="" binding="wsDualHttpBinding" contract="TrainService.ITrainService">
           <identity>
             <dns value="localhost"/>
           </identity>
