Updated C# and Arduino code to use Sign instead of track switches

--- a/CSA/callbackversion/TrainClient/TrainClient/App.config
+++ b/CSA/callbackversion/TrainClient/TrainClient/App.config
@@ -14,7 +14,7 @@
             </wsDualHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:8733/TrainService/" binding="wsDualHttpBinding"
+            <endpoint address="http://172.16.1.1:8733/TrainService/" binding="wsDualHttpBinding"
                 bindingConfiguration="WSDualHttpBinding_ITrainService" contract="TrainService.ITrainService"
                 name="WSDualHttpBinding_ITrainService">
                 <identity>
