Client security edit

--- a/CSA/callbackversion/TrainClient/TrainClient/App.config
+++ b/CSA/callbackversion/TrainClient/TrainClient/App.config
@@ -7,8 +7,8 @@
         <bindings>
             <wsDualHttpBinding>
                 <binding name="WSDualHttpBinding_ITrainService">
-                    <security mode="Message">
-                        <message clientCredentialType="Windows" />
+                    <security mode="None">
+                        
                     </security>
                 </binding>
             </wsDualHttpBinding>
@@ -17,9 +17,7 @@
             <endpoint address="http://172.16.1.1:8733/TrainService/" binding="wsDualHttpBinding"
                 bindingConfiguration="WSDualHttpBinding_ITrainService" contract="TrainService.ITrainService"
                 name="WSDualHttpBinding_ITrainService">
-                <identity>
-                    <dns value="localhost" />
-                </identity>
+                
             </endpoint>
         </client>
     </system.serviceModel>
